force-app/main/default/objects/VICompte_general__c/VICompte_general__c.object-meta.xml
<CustomObject>
    <label>Compte général</label>
    <nameField>
        <label>Nom de Compte général</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comptes généraux</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>