force-app/main/default/objects/VICompte_general__c/fields/Alimentation_PR_PV__c.field-meta.xml
<CustomField>
    <fullName>Alimentation_PR_PV__c</fullName>
    <label>Alimentation PR/PV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>