force-app/main/default/objects/VICompte_general__c/fields/Compte_groupe__c.field-meta.xml
<CustomField>
    <fullName>Compte_groupe__c</fullName>
    <label>Compte groupe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>