force-app/main/default/objects/VICompte_general__c/fields/Type_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Type_enregistrement__c</fullName>
    <formula>if( Alimentation_PR_PV__c =&apos;PR&apos;, &apos;R&apos;, if(Alimentation_PR_PV__c =&apos;PV&apos;, &apos;A&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>