force-app/main/default/objects/VICompte_general__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compte_groupe__c</columns>
    <columns>Libelle__c</columns>
    <columns>Alimentation_PR_PV__c</columns>
    <columns>Type_enregistrement__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>